Added a link to the newly created Projects page

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,8 @@
         </div>
     
         <div>
-            <h2><a href="">Project</a></h2>
-            <p>This page will show all our projects and who is working on what.             </p>
+            <h2><a href="/projects">Projects</a></h2>
+            <p>This page will show all our projects and who is working on what.</p>
         </div>
         
         <div>
