Fixed errors in templates and setup new paths in views

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-CTYPE html>
+<!DOCTYPE html>
 
 <html>
     <head>
@@ -9,7 +9,7 @@ CTYPE html>
         </div>
 
         <div>
-            {% block body_block %}{% endblock %}
+            {% block content %}{% endblock content %}
         </div>
 
 
