added url, login.html, link to login

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
         </div>
         
         <div>
-            <h2><a href="">Login</a></h2>
+            <h2><a href="/login">Login</a></h2>
             <p>This page will be only for cats attending Wednesday's meeting who have their github account setup.</p>
         <div>
 
