--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 
+{% load staticfiles %}
 <html>
     <head>
         <title>TrackCat - {% block title %}TrackCat{% endblock %}</title>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     </head>
         <div>
         <p> Jaz sem NAVIGACIJA</p>
