dodajama popravke na settings, urls, views, about.html - about dela

--- a/templates/TrackCat/about.html
+++ b/templates/TrackCat/about.html
@@ -6,6 +6,8 @@
 
     <body>
         <h1>This is TrackCat about page</h1>
+        <p>Return to the <a href="/">TrackCat Home Page</a>
+		</p>
     </body>
 
 </html>
