dodajam about page, ki dela na trenutnem repo TrackCat, vkljucno s spremembam na settings, ulrs in views

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -15,7 +15,7 @@
         </div>
 
         <div>
-            <h2><a href="">About us</a></h2>
+            <h2><a href="/about">About us</a></h2>
             <p>This page will tel you more about us CodeCatz.</p>
         </div>
     
