--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -4,12 +4,29 @@
 
 {% block content%}
 
+{% load static %}
+
 
     <div>
-        <h1><a href="">CodeCatz about page</a></h1>
-        <p>This is text about CodeCatz group, purpose and goals. </p>
-	</div>
+        <h1><a href="">CodeCatz - About Us</a></h1>
+        
+        <p>CodeCatz je skupina programerskih mačk, ki se vsako sredo zvečer skupaj uči programiranja, ustvarja čisto zaresne projekte in poje veliko čokolade. Poleg dobre volje je obvezna oprema mačk vztrajnost, radovednost in vsak teden vsaj nekaj ur časa, ki jih lahko posvetiš programiranju. </p>
+        <p>
+        <p>Skupino CodeCatz lahko spremljate na socialnih omrežjih twitter in facebook, kjer so objavljeni podatki o delavnicah in srečanjih za vse, ki jih zanima računalniško programiranje. V svoje vrste pa vabijo tudi mentorje in mentorice, ki so pripravljeni deliti svoje znanje.</p>
+    </div>
+        
+		
 	<div>
+		Dobivamo se <b>vsako sredo ob 17:30 na Kersnikovi 4 v Ljubljani</b>, v prostorih RAMPE, laboratorija za hekanje znanosti, umetnosti in družbe.
+	</div>	
+	<p>
+	<div>
+		<img src="{% static "CodeCatz_picture.png" %}" alt="Picture of CodeCatz"/>
+	</div>
+	<p>
+	<div>
+		<p>Do you want to see our projects? <a href="/projects">TrackCat Projects</a>
+		<p>
 		<p>Return to the <a href="/">TrackCat Home Page</a>
 		</p>
 	</div>
