--- a/templates/base.html
+++ b/templates/base.html
@@ -11,42 +11,40 @@
 	</head>
         <body>
 		<div>
-		<nav class="navbar navbar-default">
+            <nav class="navbar navbar-default">
                 <div class="container-fluid">
+                
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
-                   <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                     <span class="sr-only">Toggle navigation</span>
-                     <span class="icon-bar"></span>
-                     <span class="icon-bar"></span>
-                     <span class="icon-bar"></span>
-                   </button>
-                   <a class="navbar-brand" href="/index">TrackCat</a>
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="/">TrackCat</a>
                 </div>
 
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                       <li><a href="/about">About us</a></li>
-                       <li><a href="/projects">Projects</a></li>
-                       <li><a href="#">Members</a></li>
-                       <li><a href="#">Events</a></li>
-                       <li><a href="#">Gallery</a></li>
-                       <li><a href="#">Login</a></li>
-                    </ul>
-               <form class="navbar-form navbar-left" role="search">
-               <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Search">
-               </div>
-               <button type="submit" class="btn btn-default">Submit</button>
-               </form>
-              </div><!-- /.navbar-collapse -->
-               </div><!-- /.container-fluid -->
-              </nav>
-
-                </div>
-
-		<div>
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav">
+                            <li><a href="/about">About us</a></li>
+                            <li><a href="/projects">Projects</a></li>
+                            <li><a href="#">Members</a></li>
+                            <li><a href="#">Events</a></li>
+                            <li><a href="#">Gallery</a></li>
+                            <li><a href="#">Login</a></li>
+                        </ul>
+                    <form class="navbar-form navbar-left" role="search">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Search">
+                        </div>
+                        <button type="submit" class="btn btn-default">Submit</button>
+                    </form>
+                    </div><!-- /.navbar-collapse -->
+                </div><!-- /.container-fluid -->
+            </nav>
+        <div>
 			{% block content %}{% endblock content %}
 		</div>
 
