Added navbar in a container class

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" href="{% static 'css/style.css' %}">
 	</head>
         <body>
-		<div>
+		<div class="container">
             <nav class="navbar navbar-default">
                 <div class="container-fluid">
                 
@@ -44,6 +44,7 @@
                     </div><!-- /.navbar-collapse -->
                 </div><!-- /.container-fluid -->
             </nav>
+        </div><!-- /.container -->
         <div>
 			{% block content %}{% endblock content %}
 		</div>
