Added two classes to the footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -50,10 +50,11 @@
 			{% block content %}{% endblock content %}
 		</div><!-- /.container for main content -->
 
-
-		<div>
-			<p> Jaz sem pa FOOTER</p>
-		</div>
+		<footer class="footer">
+				<div class="container">
+					<p class="text-muted">Waiting to become sticky FOOTER.</p>
+				</div>
+		</footer>
 
 
 	</body>
