--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -3,10 +3,37 @@
 {% block title %}TrackCat Home page{% endblock %}
 
 {% block content %}
-
-	<div>
+    <!-- Main jumbotron for a primary message -->
+	<div class="jumbotron">
 		<h1><a href="">TrackCat</a></h1>
 		<p>A tool for tracking the progress of the kittens (and cat{s,z}) in out CodeCatz meetup group</p>
 	</div>
+	<!--Row with three columns-->
+	<div class="row">
+		<div class="col-md-4">
+			<h2>Projects</h2>
+			<p>The CodeCatz girls work on creative and interesting projects using some awesome technolgy.</p>
+            <p>
+				<a class="btn btn-default" role="button" href="/projects">Read more >></a>
+			</p>
+        </div>
+		<div class="col-md-4">
+			<h2>Members</h2>
+			<p>We are a group of programming kittens mentored by a group of  more experienced cats. More experienced cats help kittens learn how to code. You are in the right place if you want to meet us.</p>
+            <p>
+				<a class="btn btn-default" role="button" href="#">Read more >></a>
+			</p>
+		</div>
+		<div class="col-md-4">
+			<h2>Events</h2>
+			<p>We meet every Wednesday sharp @17:30 at the RAMPA Laboratorij to code or learn about coding.</p>
+            <p>
+				<a class="btn btn-default" role="button" href="#">Read more >></a>
+			</p>
+	    </div>
+	</div>
+
+
+
 
 {% endblock content %}
