Added footer for TrackCat

--- a/templates/base.html
+++ b/templates/base.html
@@ -52,8 +52,11 @@
 
 		<footer class="footer">
 				<div class="container">
-					<p class="text-muted">Waiting to become sticky FOOTER.</p>
-				</div>
+      				<a href="https://github.com/CodeCatz/TrackCat">
+        			<img alt="CodeCatz" src="{% static 'CodeCatz.jpg' %}">
+      				</a>
+      				CodeCatz/TrackCat @GitHub
+       			</div>
 		</footer>
 
 
