--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,14 +1,34 @@
 {% extends 'base.html' %}
 
-{% block title %}TrackCat About Page{% endblock %}
+{% block title %}CodeCatz - About Us{% endblock %}
 
 {% block content%}
 
+{% load staticfiles %}
 
-	<div>
-		<h1><a href="">CodeCatz about page</a></h1>
-		<p>This is text about CodeCatz group, purpose and goals. </p>
+
+	<div class="jumbotron">
+		<p>We, CodeCatz, are learning to code, beause we can and because we want to! </p>
+		<p>CodeCatz is a group of programming kittens and several slightly more experienced cats. Kittens want to learn coding, cats are here to help them. We started with Python and web applications, we'll continue with whatnots.</p>
+		<p> Who knows where we will end! </p>
+	</div>
+	<div class="row">
+		<div class="col-md-4">
+		<a href="https://twitter.com/codecatz">
+			<img alt="TwitterCatz" src="{% static 'twittcat.jpg' %}">
+			<p>Twitter CodeCatz: Follow me</p>
+		</a>
+		</div>
+		<div class="col-md-4">				
+		<a href="https://www.facebook.com/CodeCatz">
+			<img alt="TwitterCatz" src="{% static 'fbcatblue.jpg' %}">
+		</a>	
+		</div>
+		<div class="col-md-4">
+		<a href="http://codecatz.github.io/">
+			<p>The "OTHER" homepage</p>
+		</a>
+		</div>
 	</div>
 
 {% endblock content%}
-
