--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -21,14 +21,14 @@
 			<h2>Members</h2>
 			<p>We are a group of programming kittens mentored by a group of  more experienced cats. More experienced cats help kittens learn how to code. You are in the right place if you want to meet us.</p>
 				<p>
-				<a class="btn btn-default" role="button" href="#">Read more >></a>
+				<a class="btn btn-default" role="button" href="/members">Read more >></a>
 				</p>
 		</div>
 		<div class="col-md-4">
 			<h2>Events</h2>
 			<p>We meet every Wednesday sharp @17:30 at the RAMPA Laboratorij to code or learn about coding.</p>
 				<p>
-				<a class="btn btn-default" role="button" href="#">Read more >></a>
+				<a class="btn btn-default" role="button" href="/events">Read more >></a>
 				</p>
 		</div>
 	</div>
