remove href leading to nowhere

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -5,7 +5,7 @@
 {% block content %}
 	<!-- Main jumbotron for a primary message -->
 	<div class="jumbotron">
-		<h1><a href="">TrackCat</a></h1>
+		<h1>TrackCat</h1>
 		<p>A tool for tracking the progress of the kittens (and cat{s,z}) in out CodeCatz meetup group</p>
 	</div>
 	<!--Row with three columns-->
