--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -6,7 +6,7 @@
 
 
 	<div>
-		<h1><a href="">All CodeCatz Login</a></h1>
+		<h1>All CodeCatz Login</h1>
 		<p>This page will show Login for our members.</p>
 	</div>
 
