--- a/templates/pages/members.html
+++ b/templates/pages/members.html
@@ -6,7 +6,7 @@
 
 
 	<div>
-		<h1><a href="">All CodeCatz Members</a></h1>
+		<h1>All CodeCatz Members</h1>
 		<p>This page will show all our members and who is working on what.</p>
 	</div>
 
