--- a/templates/pages/projects.html
+++ b/templates/pages/projects.html
@@ -6,7 +6,7 @@
 
 
 	<div>
-		<h1><a href="">All CodeCatz Projects</a></h1>
+		<h1>All CodeCatz Projects</h1>
 		<p>This page will show all our projects and who is working on what.</p>
 	</div>
 
