--- a/templates/pages/events.html
+++ b/templates/pages/events.html
@@ -6,7 +6,7 @@
 
 
 	<div>
-		<h1><a href="">All CodeCatz Events</a></h1>
+		<h1>All CodeCatz Events</h1>
 		<p>This page will show all our events.</p>
 	</div>
 
