--- a/templates/pages/gallery.html
+++ b/templates/pages/gallery.html
@@ -6,7 +6,7 @@
 
 
 	<div>
-		<h1><a href="">All CodeCatz Gallery</a></h1>
+		<h1>All CodeCatz Gallery</h1>
 		<p>This page will show gallery.</p>
 	</div>
 
