Modify style.css footer.css and base.html for sticky footer and for basic padding and margins

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,13 @@
-h1 a {
-	color: red;
-}
+/* Custom page CSS
+			-------------------------------------------------- */
 
-h2 a { 
-	color: green;
-}
+			#wrap > .container {
+				padding-top: 60px;
+			}
+			.container .credit {
+				margin: 20px 0;
+			}
+
+			code {
+				font-size: 80%;
+			}
