--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,13 @@
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 		<link rel="stylesheet" href="{% static 'css/style.css' %}">
+		<link rel="stylesheet" href="{% static 'css/footer.css' %}">
 	</head>
 	<body>
+
+<!-- Wrap all page content here -->
+		<div id="wrap">
+
 		<div class="container">
 			<nav class="navbar navbar-default">
 				<div class="container-fluid">
@@ -50,6 +55,9 @@
 		<div class="container">
 			{% block content %}{% endblock content %}
 		</div><!-- /.container for main content -->
+
+		<div id="push"></div>
+		</div></!-- /.wrap for all content -->
 
 		<footer class="footer">
 			<div class="container">
