Moved CodeCatz icon to navbar-brand

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,10 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand">CodeCatz</a>
+					<a class="navbar-brand" href="#">
+						<img alt="CodeCatz" src="{% static 'CodeCatz.jpg' %}">
+					</a>
+
 				</div>
 
 				<!-- Collect the nav links, forms, and other content for toggling -->
