--- a/templates/base.html
+++ b/templates/base.html
@@ -69,5 +69,6 @@
 				</a>
 			</div>
 		</footer>
+		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	</body>
 </html>
