--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,7 +39,7 @@ body {
 -------------------------------------------------- */
 /* Not required for template or sticky footer method. */
 
-#wrap > .container {
+.container {
 	padding-top: 60px;
 }
 .container .credit {
