--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,6 @@
 		<title>TrackCat - {% block title %}TrackCat{% endblock %}</title>
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 		<link rel="stylesheet" href="{% static 'css/style.css' %}">
 	</head>
 	<body>
@@ -59,7 +58,7 @@
 		</div><!-- /.container for main content -->
 
 		<div id="push"></div>
-		</div></!-- /.wrap for all content -->
+		</div>
 
 		<footer class="footer">
 			<div class="container">
@@ -69,6 +68,6 @@
 				</a>
 			</div>
 		</footer>
-		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+		<script  type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	</body>
 </html>
