--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
 						<span class="icon-bar"></span>
 					</button>
 					<a class="navbar-brand" href="#">
-						<img alt="CodeCatz" src="{% static 'CodeCatz.jpg' %}">
+						<img alt="CodeCatz" src="{% static 'img/CodeCatz.jpg' %}">
 					</a>
 
 				</div>
@@ -64,7 +64,7 @@
 		<footer class="footer">
 			<div class="container">
 				<a href="https://github.com/CodeCatz">
-					<img alt="CodeCatz" src="{% static 'CodeCatz.jpg' %}">
+					<img alt="CodeCatz" src="{% static 'img/CodeCatz.jpg' %}">
 					<p>GITHUB CodeCatz: Kittens learning to code like Catz</p>
 				</a>
 			</div>
