--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -15,13 +15,13 @@
 	<div class="row">
 		<div class="col-md-4">
 		<a href="https://twitter.com/codecatz">
-			<img alt="TwitterCatz" src="{% static 'twittcat.jpg' %}">
+			<img alt="TwitterCatz" src="{% static 'img/twittcat.jpg' %}">
 			<p>Twitter CodeCatz: Follow me</p>
 		</a>
 		</div>
 		<div class="col-md-4">				
 		<a href="https://www.facebook.com/CodeCatz">
-			<img alt="TwitterCatz" src="{% static 'fbcatblue.jpg' %}">
+			<img alt="TwitterCatz" src="{% static 'img/fbcatblue.jpg' %}">
 		</a>	
 		</div>
 		<div class="col-md-4">
