Added view with Links

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,7 @@
 						<li><a href="/events">Events</a></li>
 						<li><a href="/gallery">Gallery</a></li>
 						<li><a href="/login">Login</a></li>
+						<li><a href="/links">Links</a></li>
 					</ul>
 					<form class="navbar-form navbar-left" role="search">
 						<div class="form-group">
