--- a/templates/pages/links.html
+++ b/templates/pages/links.html
@@ -5,7 +5,7 @@
 {% block content%}
 
 	<div>
-		<p>We gether useful links to tutorials, good practices, etc. </p>
+		<p>We gather useful links to tutorials, good practices, etc. </p>
 
 	</div>
 
