Few more specifications for members page

--- a/templates/pages/members.html
+++ b/templates/pages/members.html
@@ -8,7 +8,17 @@
 	<div>
 		<h1>All CodeCatz Members</h1>
 		<p>This page will show all our members and who is working on what.</p>
+		<p>Find below example for one member</p>
 	</div>
+
+	<div>
+		<p>Name</p>
+		<p>Picture</p>
+		<p>About me</p>
+		<p>contact details/FB, linked in, twitter, skype</p>
+	</div>
+
+
 
 {% endblock content%}
 
