Some work on the footer... not finished

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 		<link rel="stylesheet" href="{% static 'css/style.css' %}">
+		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 	</head>
 	<body>
 
@@ -61,12 +62,15 @@
 		<div id="push"></div>
 		</div></!-- /.wrap for all content -->
 
-		<footer class="footer">
+		<footer>
 			<div class="container">
-				<a href="https://github.com/CodeCatz">
-					<img alt="CodeCatz" src="{% static 'CodeCatz.jpg' %}">
-					<p>GITHUB CodeCatz: Kittens learning to code like Catz</p>
-				</a>
+				<div class="col-md-4">	
+					<span class="fa-stack fa-lg">
+						<i class="fa fa-square-o fa-stack-2x"></i>
+						<i class="fa fa-twitter fa-stack-1x"></i>
+					</span>
+					fa-twitter on fa-square-o<br>
+				</div>
 			</div>
 		</footer>
 	</body>
