Dodani linki, ki jih je na FB postala Heidi

--- a/templates/pages/links.html
+++ b/templates/pages/links.html
@@ -8,6 +8,13 @@
 		<p>We gather useful links to tutorials, good practices, etc. </p>
 
 	</div>
-
+<div>
+    <p><a href="http://www.designforfounders.com/web-app-ux/">15 Timeless Rules for Creating Intuitive Web Apps (With Examples)</a></p>
+    <p><a href="goodui.org">Good user interface datastories</a></p>
+    <p><a href="http://designschool.canva.com/">Canva</a></p>
+    <p><a href="http://tympanus.net/codrops/">Codrops</a></p>
+    <p><a href="http://www.cssauthor.com/">CSS author</a></p>
+    <p><a href="http://uxporn.uxpin.com/">UXPorn</a></p>
+</div>
 
 {% endblock content%}
