--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -5,9 +5,13 @@
 {% block content %}
 	<!-- Main jumbotron for a primary message -->
 	<div class="jumbotron">
-		<h1>TrackCat</h1>
+        <div class="h1"> 
+		  <h1>TrackCat</h1>
+        </div>
+        <div class="h2">
 		<p>A tool for tracking the progress of the kittens (and cat{s,z}) in out CodeCatz meetup group</p>
-	</div>
+        </div>
+    </div>
 	<!--Row with three columns-->
 	<div class="row">
 		<div class="col-md-4">
