Changed CSS, h2,h3,.login, .navbar-brand padding added, codes aligned

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,14 +4,16 @@
 <html>
 	<head>
 		<title>TrackCat - {% block title %}TrackCat{% endblock %}</title>
-        <link href='http://fonts.googleapis.com/css?family=Carter+One' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet"
+href='http://fonts.googleapis.com/css?family=Carter+One' 
+type='text/css'>
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="{% static 'css/style.css' %}">
 	</head>
 	<body>
         <div class="login">
-            <button type="submit" class="btn btn-default"><a href="/login"><b>LOGIN</b></a></button>
+            <a href="/login"><b>LOGIN</b></a></button>
         </div>
 <!-- Wrap all page content here -->
 		<div id="wrap">
