--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,23 +40,29 @@ body {
 /* Not required for template or sticky footer method. */
 
 .login {
-	padding: 10px 0px 5px 45px; 
+	padding: 10px 0px 5px 1110px; 
 }
-.h1 {
+h1 {
 	border: solid;
 	width: 350px;
 	text-align: center;
 	position: relative; 
 	margin:-100px 0 0 -150px;
-	top: 100px;
+	top: 120px;
 	left: 50%;
 	font-family: 'Carter One', cursive;
 }
-.h2 {
+h2 {
 	color: #707070; 
 	text-align: center;
 	position: relative; 
-	top: 120px; 
+	top: 140px; 
+	font-size: 20px;
+	font-family: Arial;
+}
+h3 {
+	text-align: center;
+	padding-bottom: 30px; 
 }
 .jumbotron {
 	text-align:center; 
@@ -74,14 +80,11 @@ code {
 }
 /* Fit CodeCatz image in navbar-brand. */
 .navbar-brand{
-	padding: 0px;
+	padding: 6px;
 }
 .navbar-brand img{
 	height: 100%;
 }
-
-.naslov {
-font-size: 20px; 
-padding-top: 100px;
-padding-bottom: 30px;
+.linki {
+	text-align: center;
 }
