--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -5,11 +5,11 @@
 {% block content %}
 	<!-- Main jumbotron for a primary message -->
 	<div class="jumbotron">
-        <div class="h1"> 
+        <div> 
 		  <h1>TrackCat</h1>
         </div>
-        <div class="h2">
-		<p>A tool for tracking the progress of the kittens (and cat{s,z}) in out CodeCatz meetup group</p>
+        <div>
+		<p><h2>A tool for tracking the progress of the kittens (and cat{s,z}) in out CodeCatz meetup group</h2></p>
         </div>
     </div>
 	<!--Row with three columns-->
