--- a/templates/pages/links.html
+++ b/templates/pages/links.html
@@ -4,10 +4,10 @@
 
 {% block content%}
 
-    <div align="center" class="naslov">
-		<p><b>Useful links to design ideas, tutorials, good practices and more: </b></p>
-	</div>
-    <div align="center">
+    <div>
+		<p><h3>Useful links to design ideas, tutorials, good practices and more: </h3></p>
+    </div>
+    <div class="linki">
         <p><a href="http://www.designforfounders.com/web-app-ux/">15 Timeless Rules for Creating Intuitive Web Apps (With Examples)</a></p>
         <p><a href="http://goodui.org">Good user interface datastories</a></p>
         <p><a href="http://designschool.canva.com/">Canva</a></p>
