--- a/static/css/style.css
+++ b/static/css/style.css
@@ -56,3 +56,33 @@ code {
 .navbar-brand img{
 	height: 100%;
 }
+
+/* about page*/
+img{
+	width: 60px;
+	height: 60px;
+	margin: 10px;
+}
+.about_list{
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+}
+.transparent{
+	color: transparent;
+}
+.intro{
+	text-align: justify;
+	color:#5C5C5C;
+}
+strong{
+	color:#5C5C5C;
+}
+.about{
+	color:#5C5C5C;
+}
+.jumbotron{
+	padding-top: 5px;
+	padding-bottom: 5px;
+	margin: 5px;
+}
