--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -9,17 +9,11 @@
 
 	<div class="jumbotron">
 		<h2 class="about">About CodeCatz</h2>
-		<p>
 		<p class="intro">CodeCatz is a coding study group where women are always in majority. The group is dedicated all women who want to learn coding, however men are welcomed too.  Cats pass their coding knowledge to kittens through various group or personal projects and when the kittens are more skilled they pass their gained knowledge to new beginners. The objects of CodeCats is to assist women to enter in to the world of coding.</p>
-		<p>
 		<p class="intro">CodeCatz have only <strong>two rules</strong> for the members: <strong>chocolate</strong> at the meetings and <strong>full dedication to coding</strong>.</p>
-		<p>
-		<p class="intro">We are always open for a new potential members after, so come over to say hi, see how we work. Especially welcome if you're a female kitten, who wants to learn more about programming or an expert cat, who would like to help said kittens and learn new things from other Catz.
-		</p>
-		<p>
+		<p class="intro">We are always open for a new potential members after, so come over to say hi, see how we work. Especially welcome if you're a female kitten, who wants to learn more about programming or an expert cat, who would like to help said kittens and learn new things from other Catz.</p>
 		<p class="intro">CodeCatz welcome also mentors or companies who see future of the women in programming and would like to assist out kittens in any shape or forms and change a world. </p>
 		<p>We code together <strong>every Wednesday</strong> at <strong>RAMPA Laboratorij, Kersnikova ulica 4, Ljubljana at 17:30</strong>.
-		<p>
 		<p class="intro"><strong>Follow TrackCat:</strong><p>
 		<a href="https://twitter.com/codecatz" class="twitter-follow-button" data-show-count="false">Follow @twitter</a>
 				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
