Fixed indentation and footer div in base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,7 @@
 		<div id="push"></div>
 		</div>
 
-		<footer>
+		<footer class="footer">
 			<div class="container">
 				<a href="https://github.com/CodeCatz">
 					<img alt="CodeCatz" src="{% static 'img/CodeCatz.jpg' %}">
