--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -9,10 +9,11 @@
 
 	<div class="jumbotron">
 		<h2 class="about">About CodeCatz</h2>
-		<p class="intro">CodeCatz is a coding study group where women are always in majority. The group is dedicated all women who want to learn coding, however men are welcomed too.  Cats pass their coding knowledge to kittens through various group or personal projects and when the kittens are more skilled they pass their gained knowledge to new beginners. The objects of CodeCats is to assist women to enter in to the world of coding.</p>
+		<p class="intro">CodeCatz is a coding study group where women are always in majority. The group is dedicated to all women who want to learn coding, however men are welcomed too.  Cats pass their coding knowledge to kittens through various group and/or personal projects and when the kittens are more skilled, they pass their gained knowledge to new beginners. </p>
+		<p><strong>The objective of CodeCats is to assist women to enter in to the world of coding and change the world</strong>.</p>
 		<p class="intro">CodeCatz have only <strong>two rules</strong> for the members: <strong>chocolate</strong> at the meetings and <strong>full dedication to coding</strong>.</p>
-		<p class="intro">We are always open for a new potential members after, so come over to say hi, see how we work. Especially welcome if you're a female kitten, who wants to learn more about programming or an expert cat, who would like to help said kittens and learn new things from other Catz.</p>
-		<p class="intro">CodeCatz welcome also mentors or companies who see future of the women in programming and would like to assist out kittens in any shape or forms and change a world. </p>
+		<p class="intro">We are always open for a new potential members, so come over to say hi, see how we work. Especially welcome if you're a female kitten, who wants to learn more about programming or an expert cat, who would like to help said kittens and learn new things from other Catz.</p>
+		<p class="intro">CodeCatz welcome also mentors or companies who see future of women in programming and would like to assist our kittens in any shape or form. </p>
 		<p>We code together <strong>every Wednesday</strong> at <strong>RAMPA Laboratorij, Kersnikova ulica 4, Ljubljana at 17:30</strong>.</p>
 		<p class="intro"><strong>Follow TrackCat:</strong></p>
 		<a href="https://twitter.com/codecatz" class="twitter-follow-button" data-show-count="false">Follow @twitter</a>
@@ -21,26 +22,26 @@
 	</div>
 	<div class="row">
 		<div class="col-md-4">
-			<h2 class="about">Menthors</h2>
+			<h2 class="about">Mentors</h2>
 			<ul class="about_list">
-				<li><a href="https://www.facebook.com/ialja?ref=ts&fref=ts"><img src="{% static "img/Alja.png" %}">Alja Isakovic</a><li>
+				<li><a href="https://www.facebook.com/ialja?ref=ts&fref=ts"><img src="{% static "img/Alja.png" %}">Alja Isaković</a><li>
 				<li><a href="https://www.facebook.com/erika.pogorelc?fref=grp_mmbr_list"><img src="{% static "img/erikapogorelc.png" %}">Erika Pogorelc</a></li>
-				<li><a href="https://www.facebook.com/sparkica?fref=grp_mmbr_list"><img src="{% static "img/matejaverlic.png" %}">Mateja Verlic</a></li>
-				<li><a href="https://www.facebook.com/goranche?fref=grp_mmbr_list"><img src="{% static "img/goranblazic.png" %}">Goran Blazic</a></li>
+				<li><a href="https://www.facebook.com/sparkica?fref=grp_mmbr_list"><img src="{% static "img/matejaverlic.png" %}">Mateja Verlič</a></li>
+				<li><a href="https://www.facebook.com/goranche?fref=grp_mmbr_list"><img src="{% static "img/goranblazic.png" %}">Goran Blažič</a></li>
 				<li><a href="https://www.facebook.com/jure.cuhalev?fref=grp_mmbr_list"><img src="{% static "img/jurecuhalev.png" %}">Jure Cuhalev</a></li>					
-				<li><a href="https://www.facebook.com/svetka.sapelova?fref=grp_mmbr_list"><img src="{% static "img/cvetkasapelova.png" %}">Svetka</li>
+				<li><a href="https://www.facebook.com/svetka.sapelova?fref=grp_mmbr_list"><img src="{% static "img/cvetkasapelova.png" %}">Svetka Sapelova</li>
 			</ul>
 		</div> 
 		<div class="col-md-4">
 			<h2 class="about">Members</h2>
 			<ul class="about_list">
-				<li><a href='https://www.facebook.com/anuska.sirola?fref=tl_fr_box&pnref=lhc.friends'><img src="{% static "img/Anuska.png" %}">Anamarija Sustic</a></li>
+				<li><a href='https://www.facebook.com/anuska.sirola?fref=tl_fr_box&pnref=lhc.friends'><img src="{% static "img/Anuska.png" %}">Anamarija Sustič</a></li>
 				<li><a href='https://www.facebook.com/asokica?fref=grp_mmbr_list'><img src="{% static "img/heidi.png" %}">Heidi Pungartnik</a></li>
 				<li><a href='https://www.facebook.com/petra.vidmar.14?fref=grp_mmbr_list'><img src="{% static "img/petra.png" %}">Petra Vidmar</a></li>
-				<li><a href='https://www.facebook.com/nina.ninchy2?fref=grp_mmbr_list'><img src="{% static "img/ninaninchy.png" %}">Nina Ninchy</a></li>
+				<li><a href='https://www.facebook.com/nina.ninchy2?fref=grp_mmbr_list'><img src="{% static "img/ninaninchy.png" %}">Nina Pristov</a></li>
 					<li><a href='https://www.facebook.com/mojca007?fref=grp_mmbr_list'><img src="{% static "img/mojca.png" %}">Mojca</a></li>
 				<li><a href='https://www.facebook.com/dobai.livia.5?fref=grp_mmbr_list'><img src="{% static "img/liviadobai.png" %}">Livia Dobai</a></li>
-				<li><a href='https://www.facebook.com/masa.c.logar?fref=grp_mmbr_list'><img src="{% static "img/masalogar.png" %}">Masa Cernovsek Logar</a></li>	
+				<li><a href='https://www.facebook.com/masa.c.logar?fref=grp_mmbr_list'><img src="{% static "img/masalogar.png" %}">Maša Černovšek Logar</a></li>	
 			</ul>
 		</div>
 		<div class="col-md-4">
@@ -49,10 +50,11 @@
 				<li><a href="https://www.facebook.com/nina.malovrh.1?fref=grp_mmbr_list"><img src="{% static "img/ninamalovrh.png" %}">Nina Malovrh</a></li>
 				<li><a href="https://www.facebook.com/profile.php?id=1186838569&fref=grp_mmbr_list"><img src="{% static "img/hanaisnouk.png" %}">Hana Isnouk</a></li>
 				<li><a href="https://www.facebook.com/pijab1?fref=grp_mmbr_list"><img src="{% static "img/pijabalaban.png" %}">Pija Balaban</a></li>
-				<li><a href="https://www.facebook.com/nejc.jelovcan?fref=grp_mmbr_list"><img src="{% static "img/nejcjelovcan.png" %}">Nejc Jelovcan</a></li>
-				<li><a href="https://www.facebook.com/natasa.kristan.35?fref=grp_mmbr_list"><img src="{% static "img/natasamori.png" %}">Natasa Mori</a></li>
+				<li><a href="https://www.facebook.com/nejc.jelovcan?fref=grp_mmbr_list"><img src="{% static "img/nejcjelovcan.png" %}">Nejc Jelovčan</a></li>
+				<li><a href="https://www.facebook.com/natasa.kristan.35?fref=grp_mmbr_list"><img src="{% static "img/natasamori.png" %}">Nataša Mori</a></li>
 				<li><a href="https://www.facebook.com/barbara.skubic.9?fref=grp_mmbr_list"><img src="{% static "img/barbaraskubic.png" %}">Barbara Skubic</a></li>
 				<li><a href="https://www.facebook.com/maria.cankar?fref=grp_mmbr_list"><img src="{% static "img/marijacankar.png" %}">Marija Cankar</a></li>
+				<li><a href="https://www.facebook.com/tjasa.zajc1"><img src="{% static "img/tjasazajc.png" %}">Tjaša Zajc</a></li>
 			</ul>	
 		</div>
 	</div>
