--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
-						<li class="{% current 'pages-about' %}"><a href="{% url 'pages-about' %}">About Us</a></li>
+						<li class="{% current 'pages-about' %}"><a href="{% url 'pages-about' %}">About CodeCatz</a></li>
 						<li class="{% current 'pages-projects' %}"><a href="{% url 'pages-projects' %}">Projects</a></li>
 						<li class="{% current 'pages-members' %}"><a href="{% url 'pages-members' %}">Members</a></li>
 						<li class="{% current 'pages-events' %}"><a href="{% url 'pages-events' %}">Events</a></li>
