--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,6 +34,17 @@ body {
 		padding-right: 20px;
 	}
 }
+.CClogo{
+	height: 40px;
+	width: 40px;
+	position: relative;
+	margin: 0px;
+	margin-right: 30px;
+	margin-left: 10px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+
 
 /* Custom page CSS
 -------------------------------------------------- */
