--- a/templates/pages/links.html
+++ b/templates/pages/links.html
@@ -4,7 +4,7 @@
 
 {% block content%}
 
-		<p><h3>Useful links to design ideas, tutorials, good practices and more: </h3></p>
+		<h3>Useful links to design ideas, tutorials, good practices and more: </h3>
     <div class="links">
         <p><a href="http://www.designforfounders.com/web-app-ux/">15 Timeless Rules for Creating Intuitive Web Apps (With Examples)</a></p>
         <p><a href="http://goodui.org">Good user interface datastories</a></p>
