Div fixed, one p deleted

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -8,9 +8,9 @@
         <div> 
 		  <h1>TrackCat</h1>
         </div>
-        <div>
-		<p><h2>A tool for tracking the progress of the kittens (and cat{s,z}) in out CodeCatz meetup group</h2></p>
-        </div>
+            <div>
+            <h2>A tool for tracking the progress of the kittens (and cat{s,z}) in out CodeCatz meetup group</h2>
+            </div>
     </div>
 	<!--Row with three columns-->
 	<div class="row">
