--- a/static/css/style.css
+++ b/static/css/style.css
@@ -48,7 +48,7 @@ body {
 /* Not required for template or sticky footer method. */
 
 .login {
-	padding: 10px 0px 5px 1110px; 
+	padding: 10px 0px 5px 990px; 
 }
 h1 {
 	border: solid;
@@ -64,7 +64,8 @@ h2 {
 	color: #707070; 
 	text-align: center;
 	position: relative; 
-	top: 140px; 
+	top: 10px; 
+    bottom: 10px;
 	font-size: 20px;
 	font-family: Arial;
 }
@@ -99,8 +100,6 @@ img{
 	margin: 10px;
 }
 .about_list{
-	margin: 0;
-	padding: 0;
 	list-style-type: none;
 	font-size: 20px;
 	color: #5C5C5C;
@@ -122,11 +121,22 @@ strong{
 .about{
 	color: #5C5C5C;
 	font-size: 40px;
+    padding-top: 30px;
 }
 .jumbotron{
     text-align:center; 
+}
+
+#frontpage{
 	height: 300px;
 	padding: 5px 5px 20px 5px;
+}
+.jumbotron{
+    text-align:center; 
 	margin: auto;
+}
+
+#front_subtitle {
+	top: 140px;
 }
 /* end of about page */
