--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -4,12 +4,12 @@
 
 {% block content %}
 	<!-- Main jumbotron for a primary message -->
-	<div class="jumbotron">
+	<div class="jumbotron" id="frontpage">
         <div> 
 		  <h1>TrackCat</h1>
         </div>
             <div>
-            <h2>A tool for tracking the progress of the kittens (and cat{s,z}) in out CodeCatz meetup group</h2>
+            <h2 id="front_subtitle">A tool for tracking the progress of the kittens (and cat{s,z}) in out CodeCatz meetup group</h2>
             </div>
     </div>
 	<!--Row with three columns-->
