--- a/templates/base.html
+++ b/templates/base.html
@@ -68,14 +68,13 @@ type='text/css'>
 		<div id="push"></div>
 		</div>
 
-		<footer class="footer">
+		<footer>
 			<div class="container">
-				<div id="footrow">
 					<div class="col-md-4">
-						<ul class="ulfooter">
-							<li class="lifooter"><a href="{% url 'pages-about' %}">Sponsors</a></li>
-							<li class="lifooter"><a href="{% url 'pages-about' %}">Privacy</a></li>
-							<li class="lifooter"><a href="{% url 'pages-about' %}">Support</a></li>
+						<ul class="footer-links">
+							<li><a href="{% url 'pages-about' %}">Sponsors</a></li>
+							<li><a href="{% url 'pages-about' %}">Privacy</a></li>
+							<li><a href="{% url 'pages-about' %}">Support</a></li>
 						</ul>
 					</div> <!-- end col-md-5 -->
 					<div class="col-md-4">
@@ -86,8 +85,7 @@ type='text/css'>
   							RAMPA Laboratorij<br>
   							Kersnikova ulica 4, Ljubljana<br>
 						</p>
-					</div> <!-- end col-md-5 -->
-				</div> <!-- end footrow -->			
+					</div> 		
 			</div><!-- end container -->
 		</footer>
 		<script  type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
