--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -88,6 +88,7 @@ type='text/css'>
 					</div> 		
 			</div><!-- end container -->
 		</footer>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script  type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	</body>
 </html>
