adding sponsors.html

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -72,7 +72,7 @@ type='text/css'>
 			<div class="container">
 					<div class="col-md-4">
 						<ul class="footer-links">
-							<li><a href="{% url 'pages-about' %}">Sponsors</a></li>
+							<li><a href="{% url 'pages-sponsors' %}">Sponsors</a></li>
 							<li><a href="{% url 'pages-about' %}">Privacy</a></li>
 							<li><a href="{% url 'pages-about' %}">Support</a></li>
 						</ul>
