--- a/web/templates/pages/index.html
+++ b/web/templates/pages/index.html
@@ -4,14 +4,11 @@
 
 {% block content %}
 	<!-- Main jumbotron for a primary message -->
-	<div class="jumbotron" id="frontpage">
-        <div> 
+	<div id="frontpage">
+		<div>
 		<h1 id="frontpage_title">TrackCat</h1>
-        </div>
-            <div>
-            <h2 id="front_subtitle">A tool for tracking the progress of the kittens (and cat{s,z}) in out CodeCatz meetup group</h2>
-            </div>
-    </div>
+		</div>
+	</div>
 	<!--Row with three columns-->
 	<div class="row">
 		<div class="col-md-4">
