--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -15,13 +15,10 @@ type='text/css'>
 		<link rel="stylesheet" href="{% static 'css/style.css' %}">
 	</head>
 	<body>
-        <div class="login">
-            <a href="/login"><b>LOGIN</b></a></button>
-        </div>
 <!-- Wrap all page content here -->
 		<div id="wrap">
 
-		<div class="container">
+		<div class="container-fluid">
 			<nav class="navbar navbar-default">
 				<div class="container-fluid">
 
@@ -80,7 +77,7 @@ type='text/css'>
 					<div class="col-md-4">
 						<a href="{% url 'pages-index' %}"><img src="{% static "img/CodeCatz.jpg" %}"/></a>
 					</div> <!-- end col-md-2 -->
-					<div class="col-md-4">
+					<div class="col-md-4" id="address">
   						<p><strong>CodeCatz</strong><br>
   							RAMPA Laboratorij<br>
   							Kersnikova ulica 4, Ljubljana<br>
