--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,13 +42,6 @@ footer {
 	margin-bottom: 0.5em;
 	padding-bottom: 0.5em;
 }
-#map-canvas {
-    width: 300px;
-    height: 250px;
-    background-color: #CCC;
-  }
-
-
 
 /* Lastly, apply responsive CSS fixes as necessary */
 
@@ -59,9 +52,6 @@ footer {
 	padding-top: 5px;
 	padding-bottom: 5px;
 }
-
-
-
 
 /* Custom page CSS
 -------------------------------------------------- */
@@ -118,7 +108,7 @@ code {
 	text-align: center;
 }
 /* about page*/
-img {
+.img_about {
 	width: 100px;
 	height: 100px;
 	margin: 10px;
@@ -133,7 +123,7 @@ img {
 	color: transparent;
 }
 /* paragraph*/
-.intro{
+.intro {
 	text-align: justify;
 	color: #5C5C5C;
 	font-size: 20px;
@@ -145,18 +135,16 @@ strong {
 .about {
 	color: #5C5C5C;
 	font-size: 40px;
-	padding-top: 30px;
+	padding: 20px 0 10px 0;
+	text-align: left;
 }
-
 #frontpage {
 	height: 300px;
 	padding: 5px 5px 20px 5px;
 }
-.jumbotron {
-	text-align:center; 
-	margin: auto;
+.jumbotron_about { 
+	
 }
-
 #front_subtitle {
 	top: 140px;
 }
