Navigation bar changed class to fixed-top in html

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -19,7 +19,7 @@ type='text/css'>
 		<div id="wrap">
 
 		<div class="container-fluid">
-			<nav class="navbar navbar-default">
+			<nav class="navbar navbar-fixed-top">
 				<div class="container-fluid">
 
 				<!-- Brand and toggle get grouped for better mobile display -->
