Bringing stuff up to level to match the coding style

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -6,9 +6,7 @@
 <html>
 	<head>
 		<title>TrackCat - {% block title %}TrackCat{% endblock %}</title>
-        <link rel="stylesheet"
-href='http://fonts.googleapis.com/css?family=Carter+One' 
-type='text/css'>
+		<link rel="stylesheet" href='http://fonts.googleapis.com/css?family=Carter+One' type='text/css'>
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
@@ -78,14 +76,14 @@ type='text/css'>
 						<a href="{% url 'pages-index' %}"><img src="{% static "img/CodeCatz.jpg" %}"/></a>
 					</div> <!-- end col-md-2 -->
 					<div class="col-md-4" id="address">
-  						<p><strong>CodeCatz</strong><br>
-  							RAMPA Laboratorij<br>
-  							Kersnikova ulica 4, Ljubljana<br>
+						<p><strong>CodeCatz</strong><br>
+							RAMPA Laboratorij<br>
+							Kersnikova ulica 4, Ljubljana<br>
 						</p>
-					</div> 		
+					</div>
 			</div><!-- end container -->
 		</footer>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-		<script  type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	</body>
 </html>
